# luajit-cpp-sol2-interop

./: CMakeLists.txt  README.md
scripts/: test.lua
src/: main.cpp
